Zusammenuerhrung Data Exploration

--- a/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_1_clean_data.ipynb
+++ b/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_1_clean_data.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:22:40.171972400Z",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:22:40.554972200Z",
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:28:14.696353600Z",
@@ -491,14 +491,12 @@
    "source": [
     "\n",
     "filepath_name = os.path.abspath(os.path.join(src_path, 'data/train_cleaned.csv'))\n",
-    "directory_path = Path(filepath_name).parent\n",
-    "directory_path.mkdir(parents=True, exist_ok=True)\n",
-    "df_cleaned.to_csv(filepath_name)"
+    "df_cleaned.to_csv(filepath_name)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T11:56:11.242992900Z",
@@ -509,8 +507,6 @@
    "outputs": [],
    "source": [
     "filepath_name = os.path.abspath(os.path.join(src_path, 'data/test_cleaned.csv'))\n",
-    "directory_path = Path(filepath_name).parent\n",
-    "directory_path.mkdir(parents=True, exist_ok=True)\n",
     "df_cleaned_test.to_csv(filepath_name)"
    ]
   }
