--- a/src/2. Classical ML Methods/elena/SVM.ipynb
+++ b/src/2. Classical ML Methods/elena/SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,11 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n"
    ]
   },
   {
@@ -27,7 +31,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "    Train an SVM model on a dataset and evaluate its performance.\n",
+    "    Train an SVM model on a dataset and evaluate its performance\n",
     "\n",
     "    Parameters:\n",
     "        X (pd.DataFrame or np.array): Features of the dataset\n",
