--- a/src/2. Classical ML Methods/elena/SVM_bow.ipynb
+++ b/src/2. Classical ML Methods/elena/SVM_bow.ipynb
@@ -195,18 +195,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "none model accuracy for classification is = 95.43%\n",
+      "------------------------------------------------\n",
+      "Confusion Matrix:\n",
+      "      0    1\n",
+      "0  7632  122\n",
+      "1   257  284\n",
+      "------------------------------------------------\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.98      0.98      7754\n",
+      "           1       0.70      0.52      0.60       541\n",
+      "\n",
+      "    accuracy                           0.95      8295\n",
+      "   macro avg       0.83      0.75      0.79      8295\n",
+      "weighted avg       0.95      0.95      0.95      8295\n",
+      "\n"
      ]
     }
    ],
@@ -215,7 +227,7 @@
     "svm.fit(X_train, y_train)\n",
     "\n",
     "evaluate_model(svm, X_test, y_test, \"none\")\n",
-    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)\n"
+    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)"
    ]
   },
   {
@@ -223,6 +235,191 @@
    "metadata": {},
    "source": [
     "tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "none model accuracy for classification is = 95.36%\n",
+      "------------------------------------------------\n",
+      "Confusion Matrix:\n",
+      "      0    1\n",
+      "0  7728   26\n",
+      "1   359  182\n",
+      "------------------------------------------------\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      1.00      0.98      7754\n",
+      "           1       0.88      0.34      0.49       541\n",
+      "\n",
+      "    accuracy                           0.95      8295\n",
+      "   macro avg       0.92      0.67      0.73      8295\n",
+      "weighted avg       0.95      0.95      0.94      8295\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm = SVC(kernel='linear', C=0.1, random_state=42)\n",
+    "svm.fit(X_train, y_train)\n",
+    "\n",
+    "evaluate_model(svm, X_test, y_test, \"none\")\n",
+    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "none model accuracy for classification is = 95.52%\n",
+      "------------------------------------------------\n",
+      "Confusion Matrix:\n",
+      "      0    1\n",
+      "0  7642  112\n",
+      "1   260  281\n",
+      "------------------------------------------------\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.99      0.98      7754\n",
+      "           1       0.72      0.52      0.60       541\n",
+      "\n",
+      "    accuracy                           0.96      8295\n",
+      "   macro avg       0.84      0.75      0.79      8295\n",
+      "weighted avg       0.95      0.96      0.95      8295\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm = SVC(kernel='linear', degree=5, C=0.85, random_state=42)\n",
+    "svm.fit(X_train, y_train)\n",
+    "\n",
+    "evaluate_model(svm, X_test, y_test, \"none\")\n",
+    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "none model accuracy for classification is = 93.88%\n",
+      "------------------------------------------------\n",
+      "Confusion Matrix:\n",
+      "      0    1\n",
+      "0  7471  283\n",
+      "1   225  316\n",
+      "------------------------------------------------\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.96      0.97      7754\n",
+      "           1       0.53      0.58      0.55       541\n",
+      "\n",
+      "    accuracy                           0.94      8295\n",
+      "   macro avg       0.75      0.77      0.76      8295\n",
+      "weighted avg       0.94      0.94      0.94      8295\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm = SVC(kernel='linear', degree=5, C=0.85, random_state=42, class_weight={0: 1, 1: 2})\n",
+    "svm.fit(X_train, y_train)\n",
+    "\n",
+    "evaluate_model(svm, X_test, y_test, \"none\")\n",
+    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "none model accuracy for classification is = 93.67%\n",
+      "------------------------------------------------\n",
+      "Confusion Matrix:\n",
+      "      0    1\n",
+      "0  7453  301\n",
+      "1   224  317\n",
+      "------------------------------------------------\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.96      0.97      7754\n",
+      "           1       0.51      0.59      0.55       541\n",
+      "\n",
+      "    accuracy                           0.94      8295\n",
+      "   macro avg       0.74      0.77      0.76      8295\n",
+      "weighted avg       0.94      0.94      0.94      8295\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm = SVC(kernel='linear', degree=5, C=0.85, random_state=42, class_weight={0: 1, 1: 5})\n",
+    "svm.fit(X_train, y_train)\n",
+    "\n",
+    "evaluate_model(svm, X_test, y_test, \"none\")\n",
+    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "none model accuracy for classification is = 93.07%\n",
+      "------------------------------------------------\n",
+      "Confusion Matrix:\n",
+      "      0    1\n",
+      "0  7392  362\n",
+      "1   213  328\n",
+      "------------------------------------------------\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.95      0.96      7754\n",
+      "           1       0.48      0.61      0.53       541\n",
+      "\n",
+      "    accuracy                           0.93      8295\n",
+      "   macro avg       0.72      0.78      0.75      8295\n",
+      "weighted avg       0.94      0.93      0.93      8295\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm = SVC(kernel='linear', degree=5, C=0.5, random_state=10, class_weight={0: 1, 1: 10})\n",
+    "svm.fit(X_train, y_train)\n",
+    "\n",
+    "evaluate_model(svm, X_test, y_test, \"none\")\n",
+    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)"
    ]
   },
   {
@@ -241,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +470,7 @@
     "svm.fit(X_train, y_train)\n",
     "\n",
     "evaluate_model(svm, X_test, y_test, \"none\")\n",
-    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)\n"
+    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)"
    ]
   },
   {
@@ -281,6 +478,154 @@
    "metadata": {},
    "source": [
     "tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "none model accuracy for classification is = 93.55%\n",
+      "------------------------------------------------\n",
+      "Confusion Matrix:\n",
+      "      0  1\n",
+      "0  7754  0\n",
+      "1   535  6\n",
+      "------------------------------------------------\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      1.00      0.97      7754\n",
+      "           1       1.00      0.01      0.02       541\n",
+      "\n",
+      "    accuracy                           0.94      8295\n",
+      "   macro avg       0.97      0.51      0.49      8295\n",
+      "weighted avg       0.94      0.94      0.91      8295\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm = SVC(kernel='rbf', C=1.0, gamma=1, random_state=42)\n",
+    "svm.fit(X_train, y_train)\n",
+    "\n",
+    "evaluate_model(svm, X_test, y_test, \"none\")\n",
+    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "none model accuracy for classification is = 93.68%\n",
+      "------------------------------------------------\n",
+      "Confusion Matrix:\n",
+      "      0   1\n",
+      "0  7753   1\n",
+      "1   523  18\n",
+      "------------------------------------------------\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      1.00      0.97      7754\n",
+      "           1       0.95      0.03      0.06       541\n",
+      "\n",
+      "    accuracy                           0.94      8295\n",
+      "   macro avg       0.94      0.52      0.52      8295\n",
+      "weighted avg       0.94      0.94      0.91      8295\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm = SVC(kernel='rbf', C=1.0, gamma=0.5, random_state=42)\n",
+    "svm.fit(X_train, y_train)\n",
+    "\n",
+    "evaluate_model(svm, X_test, y_test, \"none\")\n",
+    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "none model accuracy for classification is = 93.95%\n",
+      "------------------------------------------------\n",
+      "Confusion Matrix:\n",
+      "      0   1\n",
+      "0  7746   8\n",
+      "1   494  47\n",
+      "------------------------------------------------\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      1.00      0.97      7754\n",
+      "           1       0.85      0.09      0.16       541\n",
+      "\n",
+      "    accuracy                           0.94      8295\n",
+      "   macro avg       0.90      0.54      0.56      8295\n",
+      "weighted avg       0.93      0.94      0.92      8295\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm = SVC(kernel='rbf', C=1.0, gamma=0.5, random_state=42, class_weight={0: 1, 1: 5})\n",
+    "svm.fit(X_train, y_train)\n",
+    "\n",
+    "evaluate_model(svm, X_test, y_test, \"none\")\n",
+    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "none model accuracy for classification is = 93.95%\n",
+      "------------------------------------------------\n",
+      "Confusion Matrix:\n",
+      "      0   1\n",
+      "0  7746   8\n",
+      "1   494  47\n",
+      "------------------------------------------------\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      1.00      0.97      7754\n",
+      "           1       0.85      0.09      0.16       541\n",
+      "\n",
+      "    accuracy                           0.94      8295\n",
+      "   macro avg       0.90      0.54      0.56      8295\n",
+      "weighted avg       0.93      0.94      0.92      8295\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm = SVC(kernel='rbf', degree=5, C=1, gamma=0.5, random_state=42, class_weight={0: 1, 1: 5})\n",
+    "svm.fit(X_train, y_train)\n",
+    "\n",
+    "evaluate_model(svm, X_test, y_test, \"none\")\n",
+    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)"
    ]
   },
   {
@@ -299,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +676,7 @@
     "svm.fit(X_train, y_train)\n",
     "\n",
     "evaluate_model(svm, X_test, y_test, \"none\")\n",
-    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)\n"
+    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)"
    ]
   },
   {
@@ -350,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +727,7 @@
     "svm.fit(X_train, y_train)\n",
     "\n",
     "evaluate_model(svm, X_test, y_test, \"none\")\n",
-    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)\n"
+    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)"
    ]
   },
   {
@@ -391,6 +736,50 @@
    "source": [
     "tuning"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "none model accuracy for classification is = 90.27%\n",
+      "------------------------------------------------\n",
+      "Confusion Matrix:\n",
+      "      0    1\n",
+      "0  7189  565\n",
+      "1   242  299\n",
+      "------------------------------------------------\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.93      0.95      7754\n",
+      "           1       0.35      0.55      0.43       541\n",
+      "\n",
+      "    accuracy                           0.90      8295\n",
+      "   macro avg       0.66      0.74      0.69      8295\n",
+      "weighted avg       0.93      0.90      0.91      8295\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm = SVC(kernel='sigmoid', degree=5, C=0.5, gamma=1, random_state=42, class_weight={0: 1, 1: 3})\n",
+    "svm.fit(X_train, y_train)\n",
+    "\n",
+    "evaluate_model(svm, X_test, y_test, \"none\")\n",
+    "add_to_eval_df(svm, \"SVM\", \"clean\", X_train, y_train, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
