--- a/src/3. Deep Learning Approach/imran/deep-learning-models.ipynb
+++ b/src/3. Deep Learning Approach/imran/deep-learning-models.ipynb
@@ -2,27 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not find a version that satisfies the requirement tesnorflow (from versions: none)\n",
-      "ERROR: No matching distribution found for tesnorflow\n",
-      "\n",
-      "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install tesnorflow"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -275,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,8 +262,7 @@
     "fasttext_file_path = 'wiki-news-300d-1M.vec'\n",
     "embedding_dim = 300\n",
     "glove_embedding_index, glove_embedding_matrix = load_embeddings(glove_file_path, embedding_dim, word_index)\n",
-    "fasttext_embedding_index, fasttext_embedding_matrix = load_embeddings(fasttext_file_path, embedding_dim, word_index)\n",
-    "\n"
+    "fasttext_embedding_index, fasttext_embedding_matrix = load_embeddings(fasttext_file_path, embedding_dim, word_index)"
    ]
   },
   {
@@ -305,30 +283,15 @@
     "    X_train_resampled, y_train_resampled, X_val, y_val, \n",
     "    word_index, max_len, embedding_matrix=glove_embedding_matrix)\n",
     "\n",
-    "evaluate_model(\n",
-    "    lstm_glove, lstm_glove_history, X_val, y_val, \n",
-    "    X_test=xtest_pad, test_data=test_cleaned_data, output_file=\"lstm_glove_predictions.csv\"\n",
-    ")\n",
-    "\n",
     "print(\"Training LSTM with FastText Embeddings\")\n",
     "lstm_fasttext, lstm_fasttext_history = train_lstm(\n",
     "    X_train_resampled, y_train_resampled, X_val, y_val, \n",
     "    word_index, max_len, embedding_matrix=fasttext_embedding_matrix)\n",
     "\n",
-    "evaluate_model(\n",
-    "    lstm_fasttext, lstm_fasttext_history, X_val, y_val, \n",
-    "    X_test=xtest_pad, test_data=test_cleaned_data, output_file=\"lstm_fasttext_predictions.csv\"\n",
-    ")\n",
-    "\n",
     "print(\"Training LSTM with Word2Vec Embeddings\")\n",
     "lstm_word2vec, lstm_word2vec_history = train_lstm(\n",
     "    X_train_resampled, y_train_resampled, X_val, y_val, \n",
-    "    word_index, max_len)\n",
-    "\n",
-    "evaluate_model(\n",
-    "    lstm_word2vec, lstm_word2vec_history, X_val, y_val, \n",
-    "    X_test=xtest_pad, test_data=test_cleaned_data, output_file=\"lstm_word2vec_predictions.csv\"\n",
-    ")\n"
+    "    word_index, max_len)\n"
    ]
   },
   {
@@ -361,15 +324,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, classification_report, confusion_matrix\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import numpy as np\n",
     "\n",
     "def evaluate_model(model, history, X_val, y_val, X_test=None, test_data=None, output_file=None):\n",
     "    \"\"\"\n",
@@ -465,14 +432,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluate"
+    "#### LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "evaluate_model(\n",
+    "    gru_glove, gru_glove_history, X_val, y_val, \n",
+    "    X_test=xtest_pad, test_data=test_cleaned_data, output_file=\"gru_glove_predictions.csv\"\n",
+    ")\n",
+    "\n",
+    "evaluate_model(\n",
+    "    gru_fasttext, gru_fasttext_history, X_val, y_val, \n",
+    "    X_test=xtest_pad, test_data=test_cleaned_data, output_file=\"gru_fasttext_predictions.csv\"\n",
+    ")\n",
+    "\n",
+    "evaluate_model(\n",
+    "    gru_word2vec, gru_word2vec_history, X_val, y_val, \n",
+    "    X_test=xtest_pad, test_data=test_cleaned_data, output_file=\"gru_word2vec_predictions.csv\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### LSTM"
+    "#### GRU"
    ]
   },
   {
@@ -488,29 +478,15 @@
     "\n",
     "\n",
     "evaluate_model(\n",
-    "    gru_fasttext, gru_fasttext_history, X_val, y_val, \n",
-    "    X_test=xtest_pad, test_data=test_cleaned_data, output_file=\"gru_fasttext_predictions.csv\"\n",
+    "    lstm_fasttext, lstm_fasttext_history, X_val, y_val, \n",
+    "    X_test=xtest_pad, test_data=test_cleaned_data, output_file=\"lstm_fasttext_predictions.csv\"\n",
     ")\n",
     "\n",
     "evaluate_model(\n",
-    "    gru_word2vec, gru_word2vec_history, X_val, y_val, \n",
-    "    X_test=xtest_pad, test_data=test_cleaned_data, output_file=\"gru_word2vec_predictions.csv\"\n",
-    ")"
+    "    lstm_word2vec, lstm_word2vec_history, X_val, y_val, \n",
+    "    X_test=xtest_pad, test_data=test_cleaned_data, output_file=\"lstm_word2vec_predictions.csv\"\n",
+    ")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
