vectorizing funktionen hinzugefügt

--- a/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_1_2_clean_data.ipynb
+++ b/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_1_2_clean_data.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:22:40.171972400Z",
@@ -75,7 +75,7 @@
     "import spacy\n",
     "\n",
     "\n",
-    "from src.preprocessing.cleaning.clean_data_generic_functions import clean_misspelled_words, correct_misspelled_words_in_sentence,create_word_counter,expand_slang,expand_shortcuts,extract_emojis, to_lowercase, to_lowercase_if_string, handle_hashtags, handle_userhandles, lemmatize, remove_word_from_column\n",
+    "from src.preprocessing.cleaning.clean_data_generic_functions import clean_misspelled_words, correct_misspelled_words_in_sentence,create_word_counter,expand_slang,expand_shortcuts,extract_emojis, to_lowercase, to_lowercase_if_string, handle_hashtags, handle_userhandles, lemmatize, remove_word_from_column, remove_na_from_column\n",
     "from src.preprocessing.cleaning.clean_data_generic_functions import remove_special_characters, remove_digits, remove_duplicates, remove_emoji_in_sentence, remove_emojis, remove_freqwords,remove_hashtag_sign_from_tweet,remove_least_frequent_words, remove_most_frequent_words, remove_punctuation, remove_stop_words, remove_url_from_tweet, replace_emoji_in_sentence, replace_emojis\n",
     "\n",
     "\n",
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:22:48.436489200Z",
@@ -344,42 +344,44 @@
     "    df_cleaned['tweet_cleaned'] = df_cleaned['tweet']\n",
     "\n",
     "    print(\"Start Cleaning\")\n",
-    "    print(\"Cleaning Step 1/18: to_lowercase\")\n",
+    "    print(\"Cleaning Step 1/19: to_lowercase\")\n",
     "    df_cleaned = to_lowercase(df_cleaned,'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 2/18: expand_shortcuts\")\n",
+    "    print(\"Cleaning Step 2/19: expand_shortcuts\")\n",
     "    df_cleaned = expand_shortcuts(df_cleaned,'tweet_cleaned')\n",
-    "    # print(\"Cleaning Step 3/18: remove_negations - SKIP\")\n",
+    "    # print(\"Cleaning Step 3/19: remove_negations - SKIP\")\n",
     "    # # df_cleaned = remove_negations(df_cleaned)\n",
-    "    print(\"Cleaning Step 4/18: handle_userhandles\")\n",
+    "    print(\"Cleaning Step 4/19: handle_userhandles\")\n",
     "    df_cleaned = handle_userhandles(df_cleaned,'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 5/18: handle_hashtags\")\n",
+    "    print(\"Cleaning Step 5/19: handle_hashtags\")\n",
     "    df_cleaned = handle_hashtags(df_cleaned,'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 6/18: extract_emojis\")\n",
+    "    print(\"Cleaning Step 6/19: extract_emojis\")\n",
     "    df_cleaned = extract_emojis(df_cleaned,'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 7/18: replace_emojis\")\n",
+    "    print(\"Cleaning Step 7/19: replace_emojis\")\n",
     "    df_cleaned = replace_emojis(df_cleaned,'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 8/18: remove_emojis - SKIP\")\n",
+    "    print(\"Cleaning Step 8/19: remove_emojis - SKIP\")\n",
     "    # df_cleaned = remove_emojis(df_cleaned)\n",
-    "    print(\"Cleaning Step 9/18: remove_url_from_tweet\")\n",
+    "    print(\"Cleaning Step 9/19: remove_url_from_tweet\")\n",
     "    df_cleaned = remove_url_from_tweet(df_cleaned,'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 10/18: remove_punctuation\")\n",
+    "    print(\"Cleaning Step 10/19: remove_punctuation\")\n",
     "    df_cleaned = remove_punctuation(df_cleaned,'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 11/18: remove_special_characters\")\n",
+    "    print(\"Cleaning Step 11/19: remove_special_characters\")\n",
     "    df_cleaned = remove_special_characters(df_cleaned, 'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 12/18: remove_digis\")\n",
+    "    print(\"Cleaning Step 12/19: remove_digis\")\n",
     "    df_cleaned = remove_digits(df_cleaned,'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 13/18: remove_word_from_column: amp\")\n",
+    "    print(\"Cleaning Step 13/19: remove_word_from_column: amp\")\n",
     "    df_cleaned = remove_word_from_column(df=df_cleaned, column_name=\"tweet_cleaned\",word=\"amp\")\n",
-    "    print(\"Cleaning Step 14/18: lemmatize\")\n",
+    "    print(\"Cleaning Step 14/19: lemmatize\")\n",
     "    df_cleaned = lemmatize(df_cleaned,'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 15/18: remove_stop_words\")\n",
+    "    print(\"Cleaning Step 15/19: remove_stop_words\")\n",
     "    df_cleaned = remove_stop_words(df_cleaned,'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 16/18: remove_most_frequent_words\")\n",
+    "    print(\"Cleaning Step 16/19: remove_most_frequent_words\")\n",
     "    df_cleaned = remove_most_frequent_words(df_cleaned,'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 17/18: remove_least_frequent_words\")\n",
+    "    print(\"Cleaning Step 17/19: remove_least_frequent_words\")\n",
     "    df_cleaned = remove_least_frequent_words(df_cleaned,'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 18/18: remove_duplicates\")\n",
+    "    print(\"Cleaning Step 18/19: remove_duplicates\")\n",
     "    df_cleaned = remove_duplicates(df_cleaned,'tweet_cleaned')\n",
+    "    print(\"Cleaning Step 19/19: remove_nans\")\n",
+    "    df_cleaned=remove_na_from_column(df=df_cleaned, column_name=\"tweet_cleaned\")\n",
     "    print(\"All Cleaning done\")\n",
     "\n",
     "    return df_cleaned"
