--- a/data/new_datasets/preprocessing-newdata.ipynb
+++ b/data/new_datasets/preprocessing-newdata.ipynb
@@ -840,7 +840,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "df_new = df_new.sample(frac=1).reset_index(drop=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-05T20:42:28.475920Z",
+     "start_time": "2024-12-05T20:42:28.448935Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "df_new.to_csv(\"train_extension.csv\")"
@@ -848,8 +863,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-05T20:37:30.333523500Z",
-     "start_time": "2024-12-05T20:37:29.288806600Z"
+     "end_time": "2024-12-05T20:42:30.036506200Z",
+     "start_time": "2024-12-05T20:42:28.899031900Z"
     }
    }
   },
