vectorize_function in functions Folder abgelegt. Folder 1b erstellt

--- a/src/2. Classical ML Methods/sven/NB.ipynb
+++ b/src/2. Classical ML Methods/sven/NB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "0d9ec666-3144-4ba2-976b-c91b5fe258bf",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "f636600b-8b3e-4bba-9b02-5f3733f11b4d",
    "metadata": {},
    "outputs": [],
@@ -65,10 +65,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(19354, 6293)\n",
-      "(8295, 6293)\n",
-      "(19354,)\n",
-      "(8295,)\n",
+      "(13737, 4925)\n",
+      "(5888, 4925)\n",
+      "(13737,)\n",
+      "(5888,)\n",
       "<class 'scipy.sparse._csr.csr_matrix'>\n"
      ]
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "6b80143d-955b-4c12-87f0-3b74b79a087b",
    "metadata": {},
    "outputs": [],
@@ -579,7 +579,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "import gensim.downloader as api\n",
     "\n",
-    "def vectorize_w2v_glv():\n",
+    "def vectorize_glv():\n",
     "    df = pd.read_csv('../../../data/twitter_hate-speech/train_cleaned.csv', index_col=0)\n",
     "    df = df[df['tweet_cleaned'].notna()]\n",
     "\n",
@@ -624,29 +624,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "528c438b-1342-498e-9eb0-b580e62ede54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_w2v_glv, X_test_w2v_glv, y_train_w2v_glv, y_test_w2v_glv = vectorize_w2v_glv()"
+    "X_train_glv, X_test_glv, y_train_glv, y_test_glv = vectorize_glv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "id": "8ed1b006-db02-4fcd-a8a5-62443fd71729",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf_w2v_glv = GaussianNB()\n",
-    "clf_w2v_glv.fit(X_train_w2v_glv,y_train_w2v_glv)\n",
-    "y_pred_w2v_glv = clf_w2v_glv.predict(X_test_w2v_glv)"
+    "clf_glv = GaussianNB()\n",
+    "clf_glv.fit(X_train_glv,y_train_glv)\n",
+    "y_pred_glv = clf_glv.predict(X_test_glv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "id": "744fef52-0fc3-4bd7-bd5b-c0ae6d95aaf1",
    "metadata": {},
    "outputs": [
@@ -654,18 +654,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8493068113321278\n",
-      "F1 Score: 0.3878550440744368\n",
-      "Recall: 0.7319778188539742\n",
-      "Precision: 0.26382411725516325\n",
-      "      0     1\n",
-      "0  6649  1105\n",
-      "1   145   396\n"
+      "Accuracy: 0.8738111413043478\n",
+      "F1 Score: 0.4117181314330958\n",
+      "Recall: 0.6951871657754011\n",
+      "Precision: 0.2924634420697413\n",
+      "      0    1\n",
+      "0  4885  629\n",
+      "1   114  260\n"
      ]
     }
    ],
    "source": [
-    "evaluate(y_test_w2v_glv, y_pred_w2v_glv)"
+    "evaluate(y_test_glv, y_pred_glv)"
    ]
   },
   {
@@ -760,7 +760,9 @@
    "cell_type": "code",
    "execution_count": 113,
    "id": "0ca3cadd-c728-41bc-b404-9db3ba9f425b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
