adding vectroization type to result_dict

--- a/src/2. Classical ML Methods/elena/SVM_w2v_v3_grid.ipynb
+++ b/src/2. Classical ML Methods/elena/SVM_w2v_v3_grid.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -468,6 +468,7 @@
     "    test_f1 = f1_score(y_test, y_test_pred)\n",
     "\n",
     "    result_dict = {\n",
+    "        'vectorization': 'w2v',\n",
     "        'kernel': params['kernel'],\n",
     "        'degree': 'X',\n",
     "        'C': params['C'],\n",
@@ -494,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -846,6 +847,7 @@
     "    test_f1 = f1_score(y_test, y_test_pred)\n",
     "\n",
     "    result_dict = {\n",
+    "        'vectorization': 'w2v',\n",
     "        'kernel': params['kernel'],\n",
     "        'degree': 'X',\n",
     "        'C': params['C'],\n",
@@ -912,6 +914,7 @@
     "    test_f1 = f1_score(y_test, y_test_pred)\n",
     "\n",
     "    result_dict = {\n",
+    "        'vectorization': 'w2v',\n",
     "        'kernel': params['kernel'],\n",
     "        'degree': params['degree'],\n",
     "        'C': params['C'],\n",
@@ -938,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1326,6 +1329,7 @@
     "    test_f1 = f1_score(y_test, y_test_pred)\n",
     "\n",
     "    result_dict = {\n",
+    "        'vectorization': 'w2v',\n",
     "        'kernel': params['kernel'],\n",
     "        'degree': 'X',\n",
     "        'C': params['C'],\n",
