--- a/src/2. Classical ML Methods/elena/SVM_tfidf_v4_grid.ipynb
+++ b/src/2. Classical ML Methods/elena/SVM_tfidf_v4_grid.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -412,6 +412,7 @@
     "    test_f1 = f1_score(y_test, y_test_pred)\n",
     "\n",
     "    result_dict = {\n",
+    "        'vectorization': 'tfidf',\n",
     "        'kernel': params['kernel'],\n",
     "        'degree': 'X',\n",
     "        'C': params['C'],\n",
@@ -438,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -628,6 +629,7 @@
     "    test_f1 = f1_score(y_test, y_test_pred)\n",
     "\n",
     "    result_dict = {\n",
+    "        'vectorization': 'tfidf',\n",
     "        'kernel': params['kernel'],\n",
     "        'degree': 'X',\n",
     "        'C': params['C'],\n",
@@ -654,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1594,6 +1596,7 @@
     "    test_f1 = f1_score(y_test, y_test_pred)\n",
     "\n",
     "    result_dict = {\n",
+    "        'vectorization': 'tfidf',\n",
     "        'kernel': params['kernel'],\n",
     "        'degree': params['degree'],\n",
     "        'C': params['C'],\n",
@@ -1620,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1948,6 +1951,7 @@
     "    test_f1 = f1_score(y_test, y_test_pred)\n",
     "\n",
     "    result_dict = {\n",
+    "        'vectorization': 'tfidf',\n",
     "        'kernel': params['kernel'],\n",
     "        'degree': 'X',\n",
     "        'C': params['C'],\n",
