--- a/src/2. Classical ML Methods/elena/model_evaluation.ipynb
+++ b/src/2. Classical ML Methods/elena/model_evaluation.ipynb
@@ -1575,7 +1575,11 @@
    },
    "source": [
     "\n",
-    "todo: noch Auswertung schreiben"
+    "todo: noch Auswertung schreiben\n",
+    "\n",
+    "c:\\Users\\fried\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1334: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+    "  _warn_prf(average, modifier, msg_start, len(result))\n",
+    "  --> precision scheint nur zu \"funktionieren\", wenn class_weight konfiguriert"
    ]
   },
   {
