Kommentierung Test-Ergebnisse NB und W2V Parameter

--- a/src/2. Classical ML Methods/sven/model_evaluation.ipynb
+++ b/src/2. Classical ML Methods/sven/model_evaluation.ipynb
@@ -1571,6 +1571,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "06f6c0f0-f27b-43d2-83d4-221d9da6e021",
+   "metadata": {},
+   "source": [
+    "#### Auswertung"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "397313cc-4a38-42e0-b4d9-de68372c07e0",
+   "metadata": {},
+   "source": [
+    "- Bester Recall mit Glove, dafür aber sehr schlechte Precision\n",
+    "- W2V ähnlich gut im Recall, dabei etwas besser in Accuracy und F1-Score (aber immer noch schlecht)\n",
+    "- Beste Precision mit TF-IDF (Multi), aber schlechter Recall\n",
+    "- Bester F1-Score mit TF-IDF (Complement), Precision, Recall und Accuracy zwischen 0,4 und 0,6 --> ausgewogenestes Model\n",
+    "- Unterschied Performance Train/Test: TF-IDF auf Test-Daten deutlich schlechter, W2V und Glove ähnliches Verhalten Train/Test\n",
+    "\n",
+    "--> Precision und Recall verhalten sich gegenläufig in den Modellen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "11ac0838-2de7-4e89-abbb-7f9f7576e934",
    "metadata": {},
    "source": [
@@ -2109,7 +2131,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "d294eb48-1fef-4efa-ab0f-4ebdf7de5d0d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2368,6 +2392,33 @@
    "source": [
     "w2v_param.sort_values(by=[\"test_precision\"], ascending=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbd24c56-7893-40a0-8f0f-a140b0ed3964",
+   "metadata": {},
+   "source": [
+    "#### Auswertung"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dce6a0d8-3ec3-4156-8df6-86bb869126d0",
+   "metadata": {},
+   "source": [
+    "Bezogen auf NB(!):\n",
+    "- Vector Size 200 oder 300 scheint keinen großen Unterschied zu machen\n",
+    "- Für F1 und Precision sogar 10 Vector Size ideal \n",
+    "- Idealer Min Count und Window von betrachteter Kennzahl abhängig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52df894a-1092-4ecb-8eb2-2e858a4051a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
