changed explore data

--- a/src/1. Explorative Analysis & Preprocessing/team/1_1_clean_data.ipynb
+++ b/src/1. Explorative Analysis & Preprocessing/team/1_1_clean_data.ipynb
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:22:48.436489200Z",
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -568,6 +568,7 @@
       "Cleaning Step 14/19: lemmatize\n",
       "Cleaning Step 15/19: remove_stop_words\n",
       "Cleaning Step 16/19: remove_most_frequent_words\n",
+      "Cleaning Step 17/19: remove_least_frequent_words\n",
       "Cleaning Step 18/19: remove_duplicates\n",
       "Cleaning Step 19/19: remove_nans\n",
       "All Cleaning done\n"
@@ -943,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:28:14.696353600Z",
@@ -966,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T11:56:11.242992900Z",
