changes added details 2

--- a/src/3. Deep Learning Approach/nasiba/RNN-LSTM.ipynb
+++ b/src/3. Deep Learning Approach/nasiba/RNN-LSTM.ipynb
@@ -41,21 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'vectorize_glove_without_avarage' from 'vector_functions' (c:\\Users\\Nasiba\\Documents\\1 Master Data Science\\Projektpraktikum\\WebScience24\\src\\3. Deep Learning Approach\\nasiba\\vector_functions.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 17\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfeature_extraction\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtext\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TfidfVectorizer\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfeature_extraction\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtext\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CountVectorizer\n\u001b[1;32m---> 17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mvector_functions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m vectorize_word2vec, vectorize_glove, vectorize_glove_without_avarage\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnltk\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'vectorize_glove_without_avarage' from 'vector_functions' (c:\\Users\\Nasiba\\Documents\\1 Master Data Science\\Projektpraktikum\\WebScience24\\src\\3. Deep Learning Approach\\nasiba\\vector_functions.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -209,16 +197,16 @@
      "output_type": "stream",
      "text": [
       "Erste Trainingsvektoren:\n",
-      "[[ 2.16445304e-02  2.64317468e-01  3.68718621e-02 ... -2.07666693e-01\n",
-      "   2.05400819e-01 -1.29054906e-02]\n",
-      " [-3.95046780e-05  4.67170614e-01  1.85383095e-02 ... -3.21967263e-01\n",
-      "   3.65370296e-01 -5.87519388e-02]\n",
-      " [-1.11784503e-01  6.99457797e-01 -1.53823817e-01 ... -2.98628104e-01\n",
-      "   4.31240056e-01 -2.76336348e-01]\n",
-      " [ 5.66448231e-02  4.16727352e-01 -4.56013520e-02 ... -2.16988470e-01\n",
-      "   2.95779104e-01 -1.21539003e-01]\n",
-      " [ 2.39207565e-02  5.26406795e-01 -6.33252900e-02 ... -2.73208969e-01\n",
-      "   3.96785416e-01 -1.67385531e-01]]\n"
+      "[[ 0.00314334  0.24521321  0.01301071 ... -0.1790388   0.19609999\n",
+      "  -0.00181121]\n",
+      " [-0.04438275  0.43822962 -0.02027336 ... -0.26726213  0.32337785\n",
+      "  -0.03934327]\n",
+      " [-0.14954309  0.63838789 -0.15861544 ... -0.19953268  0.36492606\n",
+      "  -0.25506332]\n",
+      " [ 0.02885317  0.3650401  -0.05225213 ... -0.16776089  0.26316421\n",
+      "  -0.10861357]\n",
+      " [-0.00282995  0.46920646 -0.07680306 ... -0.21351249  0.3517583\n",
+      "  -0.14969297]]\n"
      ]
     }
    ],
@@ -292,19 +280,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'vectorize_glove_without_avarage' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m twitter_glove_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mabspath(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(src_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msrc/3. Deep Learning Approach/nasiba/glove.twitter.27B.100d.txt\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m----> 4\u001b[0m X_train_vectors, X_test_vectors, y_train, y_test, glove_embeddings \u001b[38;5;241m=\u001b[39m \u001b[43mvectorize_glove_without_avarage\u001b[49m(df\u001b[38;5;241m=\u001b[39mdf_cleaned, text_column \u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtweet_cleaned\u001b[39m\u001b[38;5;124m\"\u001b[39m, label_column\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m\"\u001b[39m, glove_path\u001b[38;5;241m=\u001b[39mtwitter_glove_path)\n\u001b[0;32m      7\u001b[0m X_train_vectors\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'vectorize_glove_without_avarage' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nasiba\\Documents\\1 Master Data Science\\Projektpraktikum\\WebScience24\\src\\3. Deep Learning Approach\\nasiba\\vector_functions.py:286: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[text_column] = df[text_column].astype(str)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-0.28044   ,  0.39199999,  0.55759001, ...,  0.18381   ,\n",
+       "          0.094007  , -0.27184999],\n",
+       "        [-0.45910999, -0.58897001,  0.099599  , ...,  0.12999   ,\n",
+       "         -0.48536   , -0.31015   ],\n",
+       "        [-0.86185998, -0.94414997, -0.22002   , ..., -0.40002   ,\n",
+       "         -0.55721998,  0.74204999],\n",
+       "        ...,\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ]],\n",
+       "\n",
+       "       [[-0.039898  ,  0.90736002,  0.32747   , ...,  0.36886001,\n",
+       "          0.17496   , -0.58892   ],\n",
+       "        [ 0.45849001,  0.14165001,  0.0083564 , ...,  0.47777   ,\n",
+       "          0.21673   ,  0.16425   ],\n",
+       "        [-0.037545  ,  0.11898   ,  0.26445001, ...,  0.018283  ,\n",
+       "          0.004319  ,  0.11362   ],\n",
+       "        ...,\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ]],\n",
+       "\n",
+       "       [[ 0.1073    ,  0.36058   ,  0.11135   , ...,  0.14933001,\n",
+       "         -0.30864999, -0.55198002],\n",
+       "        [ 0.67330003,  0.089785  ,  0.43290001, ...,  0.0025657 ,\n",
+       "         -0.44791001, -0.18421   ],\n",
+       "        [ 0.040778  , -0.43959999, -0.29868001, ..., -0.09967   ,\n",
+       "         -0.45881999, -0.0907    ],\n",
+       "        ...,\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[ 0.26405999,  0.55940002,  0.49761999, ..., -0.055876  ,\n",
+       "         -0.074413  , -0.84075999],\n",
+       "        [-0.086995  , -0.14877   , -0.57569999, ..., -0.052013  ,\n",
+       "          0.63172001,  0.47837999],\n",
+       "        [-0.51319999, -0.088568  , -0.15791   , ..., -0.26495999,\n",
+       "          0.22649001, -0.22193   ],\n",
+       "        ...,\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ]],\n",
+       "\n",
+       "       [[ 0.14214   ,  0.25086001,  0.1912    , ...,  0.37116   ,\n",
+       "          0.70981997, -0.71227998],\n",
+       "        [ 0.52487999, -1.02419996,  0.10568   , ...,  0.47922   ,\n",
+       "         -0.21291   ,  0.23472001],\n",
+       "        [ 0.14214   ,  0.25086001,  0.1912    , ...,  0.37116   ,\n",
+       "          0.70981997, -0.71227998],\n",
+       "        ...,\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ]],\n",
+       "\n",
+       "       [[-0.03275   ,  0.48704001,  0.042684  , ..., -0.57590002,\n",
+       "          0.17017999, -0.55401999],\n",
+       "        [-0.80649   , -0.39267999, -0.39776   , ..., -0.22187001,\n",
+       "          0.11207   , -0.37571001],\n",
+       "        [-0.20728999, -0.12544   , -0.19549   , ...,  0.0091675 ,\n",
+       "         -0.62743002, -0.85624999],\n",
+       "        ...,\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "          0.        ,  0.        ]]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -355,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### one-hot-encoding"
+    "### one-hot-encoding (brauche ich nicht unbedingt)"
    ]
   },
   {
@@ -391,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -530,8 +613,8 @@
     "\n",
     "# Modell trainieren\n",
     "history = model.fit(\n",
-    "    X_train_vectors, y_train_onehot,\n",
-    "    validation_data=(X_test_vectors, y_test_onehot),\n",
+    "    X_train_vectors, y_train,\n",
+    "    validation_data=(X_test_vectors, y_test),\n",
     "    epochs=10,\n",
     "    batch_size=32,\n",
     "    verbose=1\n",
