--- a/src/2. Classical ML Methods/elena/SVM_w2v_v4_grid.ipynb
+++ b/src/2. Classical ML Methods/elena/SVM_w2v_v4_grid.ipynb
@@ -487,6 +487,7 @@
     "        'degree': 'X',\n",
     "        'C': params['C'],\n",
     "        'gamma': params['gamma'],\n",
+    "        'random_state': params['random_state'],\n",
     "        'class_weight': params['class_weight'],\n",
     "\n",
     "        # Train metrics\n",
